Refactor index.html to streamline content and enhance navigation
- Simplified the description of the rené design system, emphasizing its AI-ready features and utility-first approach.
- Updated headings for better readability and structure.
- Redesigned navigation links for improved user interaction, including new styling and layout adjustments.

--- a/index.html
+++ b/index.html
@@ -34,55 +34,46 @@
                     design for intention<br />
                     and meaning
                 </h1>
-                <h3 class="text-center">
-                    rené is a design system for styling clean, simple,
-                    lightweight interfaces. it's the first AI-ready CSS framework,
-                    creating the perfect bridge between design and code. its
-                    utility-first approach makes it naturally compatible with AI
-                    design-to-code workflows, while remaining easy enough to
-                    "get it" for humans. no weird stuff.
-                </h3>
-                <h3 class="text-center">
-                    as both a library and framework, rené offers ready-to-use
-                    elements and a consistent, customizable structure. it
-                    prioritizes utility-first classes yet allows for inline styles,
-                    making it ideal for AI interpretation while maintaining
-                    clean, maintainable code. this makes rené the ultimate
-                    common ground for designers, developers, and AI tools.
-                </h3>
+                <h4 class="box-m text-center">
+                  rené is a design system for clean, lightweight interfaces and the first
+                  AI-ready CSS framework. it bridges design and code with a utility-first
+                  approach, making it ideal for AI design-to-code workflows while remaining
+                  simple for humans. no weird stuff.
+                </h4>
+                <h4 class="box-m text-center">
+                  as a library and framework, rené provides ready-to-use elements and a
+                  customizable structure. it prioritizes utility-first classes but supports
+                  inline styles, ensuring clean, maintainable code and serving as the perfect
+                  common ground for designers, developers, and AI tools.
+                </h4>
             </div>
         </div>
         <div class="page">
-            <nav class="box-l gap-m">
-                <a href="getting_started"
-                    class="animate hover-up ease-in transition column radius-m padding-xl box-s gap-l color-primary"
-                    style="color: white">
-                    <div class="box">
-                        <svg-icon src="./images/arrow-right.svg"></svg-icon>
-                    </div>
-
-                    <h6>get started</h6>
-                </a>
-
-                <a href="styleguide"
-                    class="animate hover-up ease-in transition column color-secondary radius-m padding-xl box-s gap-l"
-                    style="color: white">
-                    <div class="box-l row justify-stretch gap-m">
-                        <div class="box">
-                            <svg-icon src="./images/shapes.svg"></svg-icon>
-                        </div>
-                    </div>
-
-                    <h6>styleguide</h6>
-                </a>
-                <a class="animate hover-up ease-in transition foreground-primary column radius-m border padding-xl box-xs gap-l"
-                    href="https://github.com/rnbwdev/rene.css">
-                    <div class="box">
-                        <svg-icon src="./images/code-brackets.svg"></svg-icon>
-                    </div>
-                    <h6>github ↗</h6>
-                </a>
-            </nav>
+            <div class="row gap-m">
+              <a href="getting_started" class="animate hover-up ease-in transition column radius-m padding-xl box gap-l background-critical" style="color: black">
+                <div class="box">
+                  <svg-icon src="./images/arrow-right.svg"></svg-icon>
+                </div>
+                <h6>get started</h6>
+              </a>
+              <a href="styleguide" class="animate hover-up ease-in transition column background-positive radius-m padding-xl box gap-l" style="color: white">
+                <div class="box-l row justify-stretch gap-m">
+                  <div class="box">
+                    <svg-icon src="./images/shapes.svg"></svg-icon>
+                  </div>
+                </div>
+                <h6>styleguide</h6>
+              </a>
+              <a
+                class="animate hover-up ease-in transition column radius-m border padding-xl box-xs gap-l"
+                href="https://github.com/rnbwdev/rene.css"
+              >
+                <div class="box">
+                  <svg-icon src="./images/code-brackets.svg"></svg-icon>
+                </div>
+                <h6>github ↗</h6>
+              </a>
+            </div>
         </div>
     </section>
 
