Refactor getting_started.html to improve content clarity and structure
- Streamlined descriptions of the rené framework, focusing on its clear design patterns and AI-readiness.
- Enhanced readability by adjusting paragraph formatting and ensuring consistent text presentation.
- Updated the stylesheet link for better accessibility and alignment with project structure.

--- a/getting_started.html
+++ b/getting_started.html
@@ -50,8 +50,7 @@
         <h2>vision</h2>
 <div class="row gap-xl">
     <div class="box">
-        <p>
-            rené brings a fresh approach to CSS frameworks by focusing on clear, 
+        <p>            rené brings a fresh approach by focusing on clear, 
             intentional design patterns. it's built to be the first truly AI-ready CSS framework,
             creating a perfect bridge between design and code.
         </p>
@@ -68,8 +67,7 @@
 
 <div class="row gap-xl">
     <div class="box">
-        <p>
-            the framework uses descriptive class names that clearly communicate their purpose.
+        <p>            the framework uses descriptive class names that clearly communicate their purpose.
             this makes it naturally compatible with AI design-to-code workflows, while remaining
             intuitive enough for human developers.
         </p>
@@ -109,9 +107,7 @@
 
 <div class="row gap-xl">
     <div class="box">
-        <p>
-            as both a library and framework, rené offers ready-to-use elements with a 
-            consistent, customizable structure. this creates a common ground for designers,
+        <p>            as both a library and framework, rené offers ready-to-use elements with a             consistent, customizable structure. this creates a common ground for designers,
             developers, and AI tools to work together seamlessly.
         </p>
     </div>
@@ -204,8 +200,7 @@
                                         Website&lt;/title&gt;
                                     </div>
                                     <div class="row">
-                                        <b style="word-break: break-word">    &lt;link rel="stylesheet"
-                                            href="https://unpkg.com/renecss/dist/rene.min.css"
+                                        <b style="word-break: break-word">&nbsp; &nbsp; &lt;link rel="stylesheet"                                            href="https://unpkg.com/@rnbws/renecss/dist/rene.min.css"
                                             /&gt;</b>
                                     </div>
                                     <div>  &lt;/head&gt;</div>
