Update getting_started.html to improve script integration and enhance tracking capabilities
- Replaced the Plausible analytics script with a new version for better tracking of file downloads and outbound links.
- Added a fallback function for the Plausible script to ensure compatibility and prevent errors.
- Removed unnecessary whitespace for cleaner code structure.

--- a/getting_started.html
+++ b/getting_started.html
@@ -14,13 +14,12 @@
     <meta property="og:image" content="./images/rene.css.png">
     <meta property="og:url" content="https://rene.css">
     <meta property="og:type" content="website">
-
-
     <link rel="icon" href="./images/favicon-light.png">
     <link rel="stylesheet" href="./src/index.css" />
     <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
-    <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
-</head>
+    <script defer data-domain="renecss.org" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.tagged-events.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+    </head>
 
 <body>
     <rnbw-header></rnbw-header>
