Refactor index.html to enhance content clarity and structure
- Streamlined the description of the rené design system, emphasizing its AI-ready capabilities and utility-first approach.
- Improved readability by adjusting text formatting and ensuring consistent presentation.
- Updated the Plausible analytics script for better tracking and added a fallback function for compatibility.
- Redesigned navigation links for improved user interaction and visual appeal.

--- a/index.html
+++ b/index.html
@@ -2,82 +2,78 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>rené</title>
-    <meta name="description" content="design for intention and meaning">
-    <meta name="keywords"
-        content="design, intention, meaning, rené, system, styling, clean, simple, lightweight, interfaces">
-    <meta property="og:title" content="rené">
-    <meta name="og:description" content="design for intention and meaning">
-    <meta property="og:image" content="./images/rene.css.png">
-    <meta property="og:url" content="https://rene.css">
-    <meta property="og:type" content="website">
-
-
-    <link rel="icon" href="./images/favicon-light.png">
-    <link rel="stylesheet" href="./src/index.css" />
-    <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
-    <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>rené</title>
+  <meta name="description" content="design for intention and meaning">
+  <meta name="keywords"
+    content="design, intention, meaning, rené, system, styling, clean, simple, lightweight, interfaces">
+  <meta property="og:title" content="rené">
+  <meta name="og:description" content="design for intention and meaning">
+  <meta property="og:image" content="./images/rene.css.png">
+  <meta property="og:url" content="https://rene.css">
+  <meta property="og:type" content="website">
+  <link rel="icon" href="./images/favicon-light.png">
+  <link rel="stylesheet" href="./src/index.css" />
+  <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
+  <script defer data-domain="renecss.org"
+    src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.tagged-events.js"></script>
+  <script>window.plausible = window.plausible || function () { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </head>
 
 <body>
-    <rnbw-header></rnbw-header>
-    <section class="box justify-stretch column align-center">
-        <div class="page">
+  <rnbw-header></rnbw-header>
+  <section class="box justify-stretch column align-center">
+    <div class="page">
 
 
-            <div class="column gap-xl align-center"><svg-icon src="images/rene-logo.svg"
-                    class="animate rotate infinite"></svg-icon>
-                <h1 class="text-center">
-                    design for intention<br />
-                    and meaning
-                </h1>
-                <h4 class="box-m text-center">
-                  rené is a design system for clean, lightweight interfaces and the first
-                  AI-ready CSS framework. it bridges design and code with a utility-first
-                  approach, making it ideal for AI design-to-code workflows while remaining
-                  simple for humans. no weird stuff.
-                </h4>
-                <h4 class="box-m text-center">
-                  as a library and framework, rené provides ready-to-use elements and a
-                  customizable structure. it prioritizes utility-first classes but supports
-                  inline styles, ensuring clean, maintainable code and serving as the perfect
-                  common ground for designers, developers, and AI tools.
-                </h4>
+      <div class="column gap-xl align-center"><svg-icon src="images/rene-logo.svg"
+          class="animate rotate infinite"></svg-icon>
+        <h1 class="text-center">
+          design for intention<br />
+          and meaning
+        </h1>
+        <h4 class="box-m text-center">
+          rené is a design system for clean, lightweight interfaces and the first
+          AI-ready CSS framework. Perfect for AI design-to-code workflows and simple for humans—no weird stuff. It
+          provides ready-to-use elements, a customizable structure, and supports both utility-first classes and inline
+          styles, making it the ideal common ground for designers, developers, and AI tools.
+        </h4>
+      </div>
+    </div>
+    <div class="page">
+      <div class="row gap-m">
+        <a href="getting_started"
+          class="animate hover-up ease-in transition column radius-m padding-xl box gap-l background-critical"
+          style="color: black">
+          <div class="box">
+            <svg-icon src="./images/arrow-right.svg"></svg-icon>
+          </div>
+          <h6>get started</h6>
+        </a>
+        <a href="styleguide"
+          class="animate hover-up ease-in transition column background-positive radius-m padding-xl box gap-l"
+          style="color: white">
+          <div class="box-l row justify-stretch gap-m">
+            <div class="box">
+              <svg-icon src="./images/shapes.svg"></svg-icon>
             </div>
-        </div>
-        <div class="page">
-            <div class="row gap-m">
-              <a href="getting_started" class="animate hover-up ease-in transition column radius-m padding-xl box gap-l background-critical" style="color: black">
-                <div class="box">
-                  <svg-icon src="./images/arrow-right.svg"></svg-icon>
-                </div>
-                <h6>get started</h6>
-              </a>
-              <a href="styleguide" class="animate hover-up ease-in transition column background-positive radius-m padding-xl box gap-l" style="color: white">
-                <div class="box-l row justify-stretch gap-m">
-                  <div class="box">
-                    <svg-icon src="./images/shapes.svg"></svg-icon>
-                  </div>
-                </div>
-                <h6>styleguide</h6>
-              </a>
-              <a
-                class="animate hover-up ease-in transition column radius-m border padding-xl box-xs gap-l"
-                href="https://github.com/rnbwdev/rene.css"
-              >
-                <div class="box">
-                  <svg-icon src="./images/code-brackets.svg"></svg-icon>
-                </div>
-                <h6>github ↗</h6>
-              </a>
-            </div>
-        </div>
-    </section>
+          </div>
+          <h6>styleguide</h6>
+        </a>
+        <a class="animate hover-up ease-in transition column radius-m border padding-xl box-xs gap-l"
+          href="https://github.com/rnbwdev/rene.css">
+          <div class="box">
+            <svg-icon src="./images/code-brackets.svg"></svg-icon>
+          </div>
+          <h6>github ↗</h6>
+        </a>
+      </div>
+    </div>
+  </section>
 
-    <under-footer></under-footer>
+  <under-footer></under-footer>
 </body>
 <script src="https://rnbw.design/rnbw-header.js"></script>
 <script src="https://weareunder.design/js/footer.js"></script>
