--- a/styleguide.html
+++ b/styleguide.html
@@ -760,7 +760,7 @@ line-height: 0.95;
                         <div class="box padding-xl radius-s border background-secondary"></div>
                         <div class="box padding-xl radius-s border background-secondary"></div>
                     </div>
-                    <h4 id="sizes">fixed-size Boxes</h4>
+                    <h4 id="sizes">fixed-size boxes</h4>
                     <hr />
                     <div class="align-start box gap-m">
                         <div class="gap-s justify-start padding-m radius-m border align-center"
