Improve site layout, typography, and metadata
- Added gap-xl class to page divs across multiple HTML files
- Updated typography CSS with improved heading margins
- Removed row-gap from layout.css
- Enhanced social media metadata with Twitter card and absolute image URLs
- Updated some h6 tags to p tags in index.html
- Added padding to reasonable.html body
- Updated rene.css.png image

--- a/getting_started.html
+++ b/getting_started.html
@@ -31,7 +31,7 @@
         </div>
         <div class="view column align-center">
             <div class="box align-center column view">
-                <div class="page">
+                <div class="page gap-xl">
                     <div>
                         <h1 id="gettingstarted">get started </br>with rené
                         </h1>
@@ -45,7 +45,7 @@
                     </p>
                 </div>
 
-<div class="page">
+<div class="page gap-xl">
     <h2>vision</h2>
     <div class="row gap-xl">
         <div class="box">
@@ -120,7 +120,7 @@
     </div>
 </div>
 
-                <div class="page">
+                <div class="page gap-xl">
                     <h2 id="installation">installation</h2>
                     <h5>install with NPM</h5>
                     <div class="row gap-xl">
@@ -227,7 +227,7 @@
 
 
 
-                <div class="page">
+                <div class="page gap-xl">
                     <h2 id="customization">customization</h2>
                     <div class="row gap-xl">
                         <div class="box">
