--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     content="design, intention, meaning, rené, system, styling, clean, simple, lightweight, interfaces">
   <meta property="og:title" content="rené">
   <meta name="og:description" content="design for intention and meaning">
-  <meta property="og:image" content="./images/rene.css.png">
+  <meta property="og:image" content="https://renecss.org/images/rene.css.png">
+  <meta name="twitter:image" content="https://renecss.org/images/rene.css.png">
+  <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:url" content="https://rene.css">
   <meta property="og:type" content="website">
   <link rel="icon" href="./images/favicon-light.png">
@@ -25,7 +27,7 @@
 <body>
   <rnbw-header></rnbw-header>
   <section class="box justify-stretch column align-center">
-    <div class="page">
+    <div class="page gap-xl">
 
 
       <div class="column gap-xl align-center"><svg-icon src="images/rene-logo.svg"
@@ -42,7 +44,7 @@
         </h4>
       </div>
     </div>
-    <div class="page">
+    <div class="page gap-xl">
       <div class="row gap-m">
         <a href="getting_started"
           class="animate hover-up ease-in transition column radius-m padding-xl box gap-l background-critical"
@@ -50,7 +52,7 @@
           <div class="box">
             <svg-icon src="./images/arrow-right.svg"></svg-icon>
           </div>
-          <h6>get started</h6>
+          <p>get started</p>
         </a>
         <a href="styleguide"
           class="animate hover-up ease-in transition column background-positive radius-m padding-xl box gap-l"
@@ -60,14 +62,14 @@
               <svg-icon src="./images/shapes.svg"></svg-icon>
             </div>
           </div>
-          <h6>styleguide</h6>
+          <p>styleguide</p>
         </a>
         <a class="animate hover-up ease-in transition column radius-m border padding-xl box-xs gap-l"
           href="https://github.com/rnbwdev/rene.css">
           <div class="box">
             <svg-icon src="./images/code-brackets.svg"></svg-icon>
           </div>
-          <h6>github ↗</h6>
+          <p>github ↗</p>
         </a>
       </div>
     </div>
