--- a/reasonable.html
+++ b/reasonable.html
@@ -21,7 +21,7 @@
     <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
 </head>
 
-<body>
+<body class="padding-xl">
 	<main>
 		<h1>Reasonable.html</h1>
 		<p>Reasonable.html is a single HTML document that contains a reasonably complete set of example HTML elements.
