--- a/styleguide.html
+++ b/styleguide.html
@@ -36,7 +36,7 @@
 
 
 
-                <div class="page">
+                <div class="page gap-xl">
                     <div>
                         <h1 id="styleguide">styleguide</h1>
                     </div>
@@ -50,7 +50,7 @@
 
 
 
-                <div class="page">
+                <div class="page gap-xl">
                     <div>
                         <h2 id="typography">typography</h2>
                         <div class="row gap-xl">
@@ -1174,7 +1174,7 @@ line-height: 0.95;
                     </div>
                 </div>
 
-                <div class="page">
+                <div class="page gap-xl">
                     <h2 id="media">media</h2>
                     <div class="gap-xl">
                         <svg-icon src="./rene.svg" class="icon-xs" data-clipboard-text=".icon-xs"></svg-icon>
@@ -1185,7 +1185,7 @@ line-height: 0.95;
                         <svg-icon src="./rene.svg" class="icon-xl" data-clipboard-text=".icon-xl"></svg-icon>
                     </div>
                 </div>
-                <div class="page">
+                <div class="page gap-xl">
                     <h2 id="motion">animation</h2>
                     <div class="gap-xl row">
                         <div class="box">
